# camera_pcl

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  out.txt  rviz_show_record.txt  time.txt
openni/devel/: .catkin  .rosinstall  setup.sh
openni/devel/share/openni_camera/cmake/: openni_cameraConfig.cmake
openni/devel/share/openni_launch/cmake/: openni_launchConfig.cmake
openni/install/: .rosinstall  setup.sh
openni/install/include/openni_camera/: OpenNIConfig.h
openni/install/share/openni_camera/cmake/: openni_cameraConfig.cmake
openni/install/share/openni_launch/cmake/: openni_launchConfig.cmake
src/: #example.py#  Camera.cpp  Camera.h  FaceRecognition.cpp  FaceRecognition.h  GetPeople.cpp  GetPeople.h  MoveSenseCamera.cpp  PoseRecognition.cpp  PoseRecognition.h  PoseRecognition.py  ProcessImage.cpp  ProcessImage.h  Sample_Cap_OpenCV.cpp  ShowRviz.cpp  ShowRviz.h  dbscan.cpp  dbscan.h  draw_curve.py  example.cpp  example.h  example_my.cpp  example_pcd.cpp
